o
snake.cc: In member function ‘void Snake::Move(WINDOW*)’:
snake.cc:56:38: error: ‘GameOver’ was not declared in this scope
   if(body_.count(Hash(n_dot))) throw GameOver();
                                      ^~~~~~~~
snake.cc:61:21: error: ‘haed_’ was not declared in this scope
   body_.insert(Hash(haed_));
                     ^~~~~
snake.cc:61:21: note: suggested alternative: ‘head_’
   body_.insert(Hash(haed_));
                     ^~~~~
                     head_
make: *** [snake.o] Error 1
